# foundst-rs

./: .env  Cargo.toml  README.md  package.json
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/migrations/2020-05-03-125332_create_startups/: down.sql
backend/src/: graphql_schema.rs  main.rs  schema.rs
backend/src/handlers/: mod.rs  startup_handler.rs
frontend/: codegen.yml  graphql.schema.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: StartupCard.tsx
frontend/src/queries/: startup.graphql  startupList.graphql
frontend/src/sites/: NewStartup.tsx  StartupCockpit.tsx  StartupList.tsx  newStartup.graphql
migrations/2020-05-03-125332_create_startups/: up.sql
src/: graphql_schema.rs  main.rs
src/handlers/: startup_handler.rs
