[package]
name = "foundst-rs"
version = "0.1.0"
authors = ["jakob"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors= "*"
uuid = { version = "0.7", features = ["v4" ,"serde"]}
serde_derive = "1.0.106"
serde = "1.0.106"
juniper = "0.14.1"
env_logger= "0.6"
futures= "0.1"
serde_json= "1.0" 
diesel = {version = "1.4.6", features = ["postgres","uuidv07"]}
dotenv = "0.15.0" 
hyphenation = { version = "*", features = ["embed_all"] }
palette = "0.5.0"
rand = "*"
rust-hsluv = "*"